[workspace]

[package]
name = "saturn-sdk-v2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
console_error_panic_hook = { version = "0.1.1", optional = true }

subxt = { git = "https://github.com/paritytech/subxt", default-features = false, features = ["jsonrpsee", "web"] }
futures = "0.3.28"
web-sys = "0.3.63"
hex = "0.4.3"
js-sys = "0.3.63"
anyhow = "1.0.71"
serde = "1.0.163"
serde_json = "1.0.96"
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
serde-wasm-bindgen = "0.5.0"

[features]
default = ["console_error_panic_hook"]
